--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,19 @@
 __pycache__
 _testoutput/
+.eslintcache
 .ipynb_checkpoints/
+.yarn-packages/
+*.doit*
 *.egg-info/
 *.log
+*.tsbuildinfo
 *.woff2
 build/
+dist/
 envs/
+lib/
 nbjss/static/nbjss.js
 node_modules/
 packages/*/lib
+src/jupyterlab_fonts/labextensions
 Untitled*.ipynb
