--- a/packages/jupyterlab-font-anonymous-pro/package.json
+++ b/packages/jupyterlab-font-anonymous-pro/package.json
@@ -1,36 +1,47 @@
 {
-  "author": "Dead Pixels Collective",
-  "bugs": {
-    "url": "https://github.com/deathbeds/jupyterlab-fonts/issues"
-  },
-  "dependencies": {
-    "@jupyterlab/application": "2",
-    "typeface-anonymous-pro": "^0.0.54"
-  },
-  "peerDependencies": {
-    "@deathbeds/jupyterlab-fonts": "1"
-  },
+  "name": "@deathbeds/jupyterlab-font-anonymous-pro",
+  "version": "2.0.0",
   "description": "Anonymous Pro Fonts for JupyterLab",
-  "files": [
-    "{lib,style,src}/**/*.{d.ts,js,css,ts,tsx,js.map}",
-    "{README.md,LICENSE}",
-    "vendor/anonymous-pro/LICENSE"
-  ],
-  "jupyterlab": {
-    "extension": true
-  },
   "keywords": [
     "jupyter",
     "jupyterlab",
     "jupyterlab-extension"
   ],
-  "license": "BSD-3-Clause",
-  "main": "lib/index.js",
-  "name": "@deathbeds/jupyterlab-font-anonymous-pro",
+  "bugs": {
+    "url": "https://github.com/deathbeds/jupyterlab-fonts/issues"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/deathbeds/jupyterlab-fonts.git"
+    "url": "https://github.com/deathbeds/jupyterlab-fonts"
   },
+  "license": "BSD-3-Clause",
+  "author": "Dead Pixels Collective",
+  "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "version": "1.0.0"
+  "files": [
+    "{lib,style,src}/**/*.{d.ts,js,css,ts,tsx,js.map}",
+    "{README.md,LICENSE}",
+    "vendor/anonymous-pro/LICENSE"
+  ],
+  "scripts": {
+    "watch": "jupyter labextension watch --debug ."
+  },
+  "dependencies": {
+    "@deathbeds/jupyterlab-fonts": "~2.0",
+    "@jupyterlab/application": "~3.1",
+    "typeface-anonymous-pro": "^1.1.13"
+  },
+  "devDependencies": {
+    "@jupyterlab/builder": "~3.1"
+  },
+  "jupyterlab": {
+    "extension": true,
+    "outputDir": "../../src/jupyterlab_fonts/labextensions/@deathbeds/jupyterlab-font-anonymous-pro",
+    "sharedPackages": {
+      "@deathbeds/jupyterlab-fonts": {
+        "bundled": false,
+        "singleton": true
+      }
+    }
+  }
 }
