--- a/packages/jupyterlab-font-dejavu-sans-mono/package.json
+++ b/packages/jupyterlab-font-dejavu-sans-mono/package.json
@@ -1,41 +1,48 @@
 {
-  "author": "Dead Pixels Collective",
-  "bugs": {
-    "url": "https://github.com/deathbeds/jupyterlab-fonts/issues"
-  },
-  "devDependencies": {
-    "dejavu-fonts-ttf": "2.37.3"
-  },
-  "dependencies": {
-    "@jupyterlab/application": "2"
-  },
-  "peerDependencies": {
-    "@deathbeds/jupyterlab-fonts": "1"
-  },
+  "name": "@deathbeds/jupyterlab-font-dejavu-sans-mono",
+  "version": "2.0.0",
   "description": "Dejavu Sans Mono Fonts for JupyterLab",
-  "files": [
-    "{lib,style,src}/**/*.{d.ts,js,css,woff2,ts,tsx,js.map}",
-    "{README.md,LICENSE}",
-    "vendor/dejavu-fonts-ttf/LICENSE"
-  ],
-  "jupyterlab": {
-    "extension": true
-  },
   "keywords": [
     "jupyter",
     "jupyterlab",
     "jupyterlab-extension"
   ],
-  "license": "BSD-3-Clause",
-  "main": "lib/index.js",
-  "name": "@deathbeds/jupyterlab-font-dejavu-sans-mono",
+  "bugs": {
+    "url": "https://github.com/deathbeds/jupyterlab-fonts/issues"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/deathbeds/jupyterlab-fonts.git"
+    "url": "https://github.com/deathbeds/jupyterlab-fonts"
   },
+  "license": "BSD-3-Clause",
+  "author": "Dead Pixels Collective",
+  "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "version": "1.0.0",
+  "files": [
+    "{lib,style,src}/**/*.{d.ts,js,css,woff2,ts,tsx,js.map}",
+    "{README.md,LICENSE}",
+    "vendor/dejavu-fonts-ttf/LICENSE"
+  ],
   "scripts": {
-    "prebuild": "python scripts/convert.py"
+    "prebuild": "python scripts/convert.py",
+    "watch": "jupyter labextension watch --debug ."
+  },
+  "dependencies": {
+    "@deathbeds/jupyterlab-fonts": "~2.0",
+    "@jupyterlab/application": "~3.1"
+  },
+  "devDependencies": {
+    "@jupyterlab/builder": "~3.1",
+    "dejavu-fonts-ttf": "^2.37.3"
+  },
+  "jupyterlab": {
+    "extension": true,
+    "outputDir": "../../src/jupyterlab_fonts/labextensions/@deathbeds/jupyterlab-font-dejavu-sans-mono",
+    "sharedPackages": {
+      "@deathbeds/jupyterlab-fonts": {
+        "bundled": false,
+        "singleton": true
+      }
+    }
   }
 }
