--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -121,15 +121,27 @@ jobs:
 
       - name: clean
         shell: bash -l {0}
-        run: rm dist/*.${{ matrix.clean-artifacts }}
+        run: |
+          rm dist/*.${{ matrix.clean-artifacts }}
 
       - name: install
         shell: bash -l {0}
-        run: python3 -m pip install --find-links=dist jupyterlab-fonts
+        run: |
+          python3 -m pip install --find-links=dist jupyterlab-fonts
 
-      - name: check
+      - name: list (ext)
         shell: bash -l {0}
         run: |
-          python -m pip install .
+          sys_prefix=$(python3 -c "print(__import__('sys').prefix)")
+          find $sys_prefix/share/jupyter/labextensions
+
+      - name: check (ext)
+        shell: bash -l {0}
+        run: |
           jupyter labextension list
           jupyter labextension list 2>&1 | grep -ie "@deathbeds/jupyterlab-font.*enabled.*ok.*python.*jupyterlab-fonts" -
+
+      - name: check (import)
+        shell: bash -l {0}
+        run: |
+          python3 -c "import jupyterlab_fonts; print(jupyterlab_fonts.__version__)" || exit 1
