--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,15 +66,15 @@ jobs:
 
       - name: lint
         shell: bash -l {0}
-        run: doit lint
+        run: doit -n4 lint || doit lint
 
       - name: build
         shell: bash -l {0}
-        run: doit build
+        run: doit -n4 build || doit build
 
       - name: dist
         shell: bash -l {0}
-        run: doit dist
+        run: doit -n4 dist || doit dist
 
       - name: upload (dist)
         uses: actions/upload-artifact@v2
