--- a/packages/jupyterlab-font-fira-code/package.json
+++ b/packages/jupyterlab-font-fira-code/package.json
@@ -3,9 +3,11 @@
   "version": "2.0.0",
   "description": "Fira Code Fonts for JupyterLab",
   "keywords": [
+    "fonts",
+    "jss",
     "jupyter",
-    "jupyterlab",
-    "jupyterlab-extension"
+    "jupyterlab-extension",
+    "jupyterlab"
   ],
   "bugs": {
     "url": "https://github.com/deathbeds/jupyterlab-fonts/issues"
