--- a/.yarnrc
+++ b/.yarnrc
@@ -1,5 +1,8 @@
+disable-self-update-check true
+ignore-optional true
+ignore-scripts true
+network-timeout "300000"
+prefer-offline true
+registry "https://registry.npmjs.org/"
 yarn-offline-mirror "./.yarn-packages"
 yarn-offline-mirror-pruning true
-ignore-optional true
-network-timeout "300000"
-disable-self-update-check true
