--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,10 @@ license_file = LICENSE
 classifiers =
     Development Status :: 4 - Beta
     Framework :: Jupyter
+    Framework :: Jupyter :: JupyterLab
+    Framework :: Jupyter :: JupyterLab :: 3
+    Framework :: Jupyter :: JupyterLab :: Extensions
+    Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt
     Intended Audience :: Developers
     Intended Audience :: Information Technology
     License :: OSI Approved :: BSD License
