--- a/packages/jupyterlab-font-dejavu-sans-mono/package.json
+++ b/packages/jupyterlab-font-dejavu-sans-mono/package.json
@@ -31,10 +31,10 @@
   },
   "dependencies": {
     "@deathbeds/jupyterlab-fonts": "~2.0",
-    "@jupyterlab/application": "~3.1"
+    "@jupyterlab/application": "3"
   },
   "devDependencies": {
-    "@jupyterlab/builder": "~3.1",
+    "@jupyterlab/builder": "^3.4",
     "dejavu-fonts-ttf": "^2.37.3"
   },
   "jupyterlab": {
