--- a/packages/jupyterlab-fonts/package.json
+++ b/packages/jupyterlab-fonts/package.json
@@ -26,21 +26,21 @@
   ],
   "scripts": {
     "prebuild": "jlpm prebuild:prep && jlpm prebuild:schema && jlpm prebuild:copy",
+    "prebuild:copy": "prettier src/_schema.d.ts > lib/_schema.d.ts",
     "prebuild:prep": "mkdirp lib",
     "prebuild:schema": "json2ts schema/fonts.json --strictIndexSignatures | prettier --stdin-filepath _schema.d.ts > src/_schema.d.ts",
-    "prebuild:copy": "prettier src/_schema.d.ts > lib/_schema.d.ts",
     "watch": "jupyter labextension watch --debug ."
   },
   "dependencies": {
-    "@jupyterlab/application": "~3.1",
-    "@jupyterlab/mainmenu": "~3.1",
-    "@jupyterlab/notebook": "~3.1",
-    "jss": "^10.7.1",
-    "jss-preset-default": "^10.7.1"
+    "@jupyterlab/application": "3",
+    "@jupyterlab/mainmenu": "3",
+    "@jupyterlab/notebook": "3",
+    "jss": "^10.9.2",
+    "jss-preset-default": "^10.9.2"
   },
   "devDependencies": {
-    "@jupyterlab/builder": "~3.1",
-    "json-schema-to-typescript": "^10.1.4",
+    "@jupyterlab/builder": "^3.4",
+    "json-schema-to-typescript": "^11.0.2",
     "mkdirp": "^1.0.4"
   },
   "jupyterlab": {
