--- a/tsconfigbase.json
+++ b/tsconfigbase.json
@@ -14,6 +14,7 @@
     "noUnusedLocals": true,
     "preserveWatchOutput": true,
     "resolveJsonModule": true,
+    "skipLibCheck": true,
     "sourceMap": true,
     "strictNullChecks": true,
     "target": "es2017",
