--- a/package.json
+++ b/package.json
@@ -31,17 +31,43 @@
     "semi": true,
     "singleQuote": true
   },
+  "nyc": {
+    "all": true,
+    "extends": "@istanbuljs/nyc-config-typescript",
+    "extension": [
+      ".js",
+      ".jsx",
+      ".ts",
+      ".tsx"
+    ],
+    "reporter": [
+      "lcov",
+      "html",
+      "text",
+      "text-summary"
+    ],
+    "require": [
+      "ts-node/register",
+      "source-map-support/register"
+    ],
+    "skip-full": true
+  },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.8.1",
-    "@typescript-eslint/parser": "^4.8.1",
-    "eslint": "^7.14.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-jest": "^24.1.3",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
+    "@ephesoft/webpack.istanbul.loader": "^2.1.0",
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
+    "eslint": "^8.24.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.8",
     "lerna": "^6.0.1",
+    "nyc": "^15.1.0",
     "prettier": "^2.7.1",
     "prettier-plugin-packagejson": "^2.2.11",
+    "source-map-loader": "^4.0.1",
+    "ts-node": "^10.9.1",
     "typescript": "~4.8.4",
     "yarn-deduplicate": "^6.0.0"
   }
