--- a/packages/jupyterlab-font-fira-code/package.json
+++ b/packages/jupyterlab-font-fira-code/package.json
@@ -25,6 +25,8 @@
     "{README.md,LICENSE}"
   ],
   "scripts": {
+    "labextension:build": "jupyter labextension build .",
+    "labextension:build:cov": "tsc -b tsconfig.cov.json && jupyter labextension build .",
     "watch": "jupyter labextension watch --debug ."
   },
   "dependencies": {
