--- a/packages/jupyterlab-font-dejavu-sans-mono/package.json
+++ b/packages/jupyterlab-font-dejavu-sans-mono/package.json
@@ -26,6 +26,8 @@
     "vendor/dejavu-fonts-ttf/LICENSE"
   ],
   "scripts": {
+    "labextension:build": "jupyter labextension build .",
+    "labextension:build:cov": "tsc -b tsconfig.cov.json && jupyter labextension build .",
     "prebuild": "python scripts/convert.py",
     "watch": "jupyter labextension watch --debug ."
   },
