--- a/packages/jupyterlab-fonts/package.json
+++ b/packages/jupyterlab-fonts/package.json
@@ -25,6 +25,8 @@
     "{LICENSE,README.md}"
   ],
   "scripts": {
+    "labextension:build": "jupyter labextension build .",
+    "labextension:build:cov": "tsc -b tsconfig.cov.json && jupyter labextension build .",
     "prebuild": "jlpm prebuild:prep && jlpm prebuild:schema && jlpm prebuild:copy",
     "prebuild:copy": "prettier src/_schema.d.ts > lib/_schema.d.ts",
     "prebuild:prep": "mkdirp lib",
